--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atom-light-ui",
   "theme": "ui",
   "version": "0.42.0",
-  "description": "Default light theme for interface components",
+  "description": "A light UI theme for Atom",
   "repository": "https://github.com/atom/atom-light-ui.git",
   "license": "MIT",
   "engines": {
