--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "atom-light-ui",
+  "name": "atom-arc-ui",
   "theme": "ui",
-  "version": "0.43.0",
+  "version": "0.0.1",
   "description": "A light UI theme for Atom",
-  "repository": "https://github.com/atom/atom-light-ui.git",
+  "repository": "https://github.com/thwischm/atom-arc-ui",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
